# adf-macro

./: Cargo.toml  main.rs
adf-template-lib/: Cargo.toml
adf-template-lib/src/: lib.rs
adf-template-macro/: Cargo.toml
adf-template-macro/src/: lib.rs
src/: lib.rs
template/: comment.html  issue.html
tests/: template.html
